--- a/Ambe.html
+++ b/Ambe.html
@@ -12,7 +12,7 @@
           </div>
                                      <div class="bio"><h3>Biodata</h3></div>
                                            <div class="biodata">
-  
+  <img src="carl.jpeg" alt="#">
    <p class="details">
                                                                                           Fullname: Carl Hazel Ambe
                                                                                                          <br>
